blueox (0.6.0)

  * Introduce new utility, oxingest
  * Add support for datetime.date serialization

-- Rhett Garber <rhettg@gmail.com>  Mon, 2 Dec 2013 18:04:00 -0800

blueox (0.5.10)

  * Bad distribution

-- Rhett Garber <rhettg@gmail.com>  Fri, 22 Nov 2013 18:47:00 -0800

blueox (0.5.9)

  * Update contrib support for celery 3.1.4
  * Add datetime serialization to msg pack encoder

-- Rhett Garber <rhettg@gmail.com>  Thu, 21 Nov 2013 15:08:00 -0800

blueox (0.5.8)

  * Fix oxview issue where multiple lines would be printed if JSON was enabled. (wonga00)

-- Rhett Garber <rhettg@gmail.com>  Tue, 19 Nov 2013 10:49:00 -0800

blueox (0.5.7)

  * Enhanced Django middleware to optionally include 'version' or 'revision'
    request attributes.

-- Rhett Garber <rhettg@gmail.com>  Thu, 14 Nov 2013 15:53:00 -0800

blueox (0.5.6)

  * Fixed bug in Django middleware where blocked requests caused response error.
  * Added new decorator wrapping a function in a context.

-- Rhett Garber <rhettg@gmail.com>  Thu, 24 Oct 2013 11:42:00 -0700

blueox (0.5.5)

  * Handle serializing python decimal and other more resiliancy around
    serializing contexts.
  * Django middleware handles 'None' response values.
  * Remove extra cookies value in django middleware. It can be parsed out of
    headers.

-- Rhett Garber <rhettg@gmail.com>  Tue, 22 Oct 2013 11:11:00 -0700

blueox (0.5.4)

  * Fix issue with logger that could result in some bad recursion.

-- Rhett Garber <rhettg@gmail.com>  Mon, 21 Oct 2013 22:57:00 -0700

blueox (0.5.3)

  * zmq socket changes for better behavior during oxd failures.

-- Rhett Garber <rhettg@gmail.com>  Thr, 17 Oct 2013 13:15:00 -0700

blueox (0.5.2)

  * Support for Celery
  * Fix for bad clients crashing oxd
  * Support nested overlap in context names

-- Rhett Garber <rhettg@gmail.com>  Tue, 15 Oct 2013 11:26:00 -0700

blueox (0.5.1)

  * Packaging issue

-- Rhett Garber <rhettg@gmail.com>  Mon, 30 Sep 2013 18:27:00 -0700

blueox (0.5.0)
