@@ -2,6 +2,7 @@ import time
 import pprint
 import random
 import collections
+import traceback
 from testify import *
 
 import tornado.ioloop
@@ -9,17 +10,16 @@ import tornado.gen
 import tornado.web
 import blueox.tornado_utils
 
+# vendor module. Tornado testing in Testify
 import tornado_test
 
-blueox.tornado_utils.install()
-
-class AsyncHandler(blueox.tornado_utils.SampleRequestHandler):
-    @tornado.web.asynchronous
-    @tornado.gen.engine
+class AsyncHandler(blueox.tornado_utils.BlueOxRequestHandlerMixin, tornado.web.RequestHandler):
+    @blueox.tornado_utils.coroutine
     def get(self):
         loop = self.request.connection.stream.io_loop
 
-        req_id = self.blueox.id
+        req_id = self.blueox_ctx.id
+        blueox.set('async', True)
 
         called = yield tornado.gen.Task(loop.add_timeout, time.time() + random.randint(1, 2))
 
@@ -30,8 +30,25 @@ class AsyncHandler(blueox.tornado_utils.SampleRequestHandler):
         self.finish()
 
 
-class MainHandler(blueox.tornado_utils.SampleRequestHandler):
+class AsyncErrorHandler(blueox.tornado_utils.BlueOxRequestHandlerMixin, tornado.web.RequestHandler):
+    @blueox.tornado_utils.coroutine
     def get(self):
+        loop = self.request.connection.stream.io_loop
+
+        called = yield tornado.gen.Task(loop.add_timeout, time.time() + random.randint(1, 2))
+
+        raise Exception('hi')
+
+    def write_error(self, status_code, **kwargs):
+        if 'exc_info' in kwargs:
+            blueox.set('exception', ''.join(traceback.format_exception(*kwargs["exc_info"])))
+
+        return super(AsyncErrorHandler, self).write_error(status_code, **kwargs)
+
+
+class MainHandler(blueox.tornado_utils.BlueOxRequestHandlerMixin, tornado.web.RequestHandler):
+    def get(self):
+        blueox.set('async', False)
         self.write("Hello, world")
 
 
@@ -44,6 +61,10 @@ class SimpleTestCase(tornado_test.AsyncHTTPTestCase):
     def setup_log(self):
         self.log_ctx = collections.defaultdict(list)
 
+    @setup
+    def build_client(self):
+        self.http_client = blueox.tornado_utils.AsyncHTTPClient(self.io_loop)
+
     def logit(self, ctx):
         self.log_ctx[ctx.id].append(ctx)
 
@@ -51,10 +72,30 @@ class SimpleTestCase(tornado_test.AsyncHTTPTestCase):
         application = tornado.web.Application([
             (r"/", MainHandler),
             (r"/async", AsyncHandler),
+            (r"/error", AsyncErrorHandler),
         ])
         return application
 
-    def test(self):
+    def test_error(self):
+        f = self.http_client.fetch(self.get_url("/error"), self.stop)
+        resp = self.wait()
+
+        #for ctx_id in self.log_ctx:
+            #print ctx_id
+            #for ctx in self.log_ctx[ctx_id]:
+                #pprint.pprint(ctx.to_dict())
+
+        assert_equal(len(self.log_ctx), 2)
+
+        found_exception = False
+        for ctx_list in self.log_ctx.values():
+            for ctx in ctx_list:
+                if ctx.to_dict()['body'].get('exception'):
+                    found_exception = True
+
+        assert found_exception
+
+    def test_context(self):
         self.http_client.fetch(self.get_url("/async"), self.stop)
         self.http_client.fetch(self.get_url("/"), lambda x : x)
         resp = self.wait()
@@ -66,15 +107,22 @@ class SimpleTestCase(tornado_test.AsyncHTTPTestCase):
 
         # If everything worked properly, we should have two separate ids, one will have two contexts associated with it.
         # Hopefully it's the right one.
-        found = None
+        found_sync = None
+        found_async = None
+        found_client = 0
         for ctx_list in self.log_ctx.values():
             for ctx in ctx_list:
-                if ctx.name == "request" and ctx.to_dict()['body']['uri'] == '/async':
-                    found = ctx
-                    break
+                if ctx.name == "request" and ctx.to_dict()['body']['async']:
+                    assert_equal(len(ctx_list), 2)
+                    found_async = ctx
+                if ctx.name == "request" and not ctx.to_dict()['body']['async']:
+                    assert_equal(len(ctx_list), 1)
+                    found_sync = ctx
+                if ctx.name == "httpclient":
+                    found_client += 1
 
-        assert found
-
-        assert_equal(len(self.log_ctx[found.id]), 2)
+        assert found_async
+        assert found_sync
+        assert_equal(found_client, 2)
 
         assert_equal(resp.code, 200)
